# Hand-Bridge-App

./: CMakeLists.txt  CodeAnalysis.ruleset  README.md  imgui.ini  leapMotionApp.sln  leapMotionApp.vcxproj  test_glm_include.cpp
src/: CrashDumpHandler.h  SuppressWarnings.h  main.cpp  resource.h  resource.rc
src/app/: AppCore.cpp  AppCore.hpp
src/core/: AppLogger.hpp  AspectMapper.hpp  AspectRatioChangedEvent.hpp  ConfigManager.cpp  ConfigManager.h  ConfigManagerInterface.h  ConnectEvent.hpp  DeviceAliasManager.cpp  DeviceAliasManager.hpp  DeviceConnectedEvent.hpp  DeviceHandAssignedEvent.hpp  DeviceLostEvent.hpp  DisconnectEvent.hpp  FrameCallback.hpp  FrameData.hpp  HandData.hpp  IFrameStreamingInputDevice.hpp  IInputDevice.hpp  LeapConnectionImpl.cpp  LeapConnectionImpl.hpp  LeapDeviceManager.cpp  LeapDeviceManager.hpp  LeapInput.cpp  LeapInput.hpp  Log.hpp  ThreadSafeQueue.hpp  TrackingDataEvent.hpp  nlohmann_json_forward.hpp
src/core/interfaces/: IConfigStore.hpp  IFrameSource.hpp  IInputDevice.hpp  ILeapConnection.hpp  ITransportSink.hpp
src/di/: ServiceLocator.hpp
src/pipeline/: 00_LeapConnection.cpp  00_LeapConnection.hpp  01_LeapPoller.cpp  01_LeapPoller.hpp  02_LeapSorter.cpp  02_LeapSorter.hpp  03_DataProcessor.cpp  03_DataProcessor.hpp  04_OscSender.cpp  04_OscSender.hpp
src/transport/osc/: OscController.cpp  OscController.h  OscMessage.hpp
src/ui/: DeviceTrackingModel.hpp  ImGuiSafety.h  ImGuiWrapper.h  MainAppWindow.cpp  MainAppWindow.h  MainAppWindow.hpp  OpenGLRenderer.cpp  OpenGLRenderer.h  UIController.cpp  UIController.hpp  UIManager.cpp  UIManager.h  imgui_impl_opengl3.cpp  imgui_impl_sdl2.cpp
src/utils/: HandleWrapper.hpp  MathTypes.h  SpscQueue.hpp  ThreadAffinity.h
tests/: TestLeapDataRouter.cpp  test_AspectMapper.cpp  test_ConfigManager.cpp  test_DataProcessor.cpp  test_DataProcessor_HandPresence.cpp  test_DeviceAliasManager.cpp  test_DeviceTrackingModel.cpp  test_LeapConnection.cpp  test_LeapPoller.cpp  test_LeapSorter.cpp  test_MainAppWindow.cpp  test_OscSender.cpp  test_PipelineEndToEnd.cpp
